# pyinpy

./: LICENSE.txt  README.md  setup.cfg  setup.py
pyinpy/: __init__.py  inject.py  main.py
