[options]
zip_safe = False
python_requires = >=3.7
packages = pyinpy
install_requires =
    hypno

[metadata]
name = pyinpy
version = 0.1.0
description = A tool allowing to inject python code into a running python process.
author = walle
author_email = walle88@qq.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.txt
keywords = python injection library 
url = https://github.com/leegohi/pyinpy
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

